--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "lucide-vue-next": "^0.511.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
