--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "@vuepic/vue-datepicker": "^11.0.2",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "lucide-vue-next": "^0.511.0",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
